--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -47,4 +47,10 @@ group :development, :test do
 
   # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
   gem "rubocop-rails-omakase", require: false
+
+  # Testing framework
+  gem "rspec-rails"
+  
+  # Factory for test data
+  gem "factory_bot_rails"
 end
