--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -17,6 +17,7 @@ gem "tzinfo-data", platforms: %i[ windows jruby ]
 
 gem "net-http"
 gem "dotenv-rails"
+gem "mcp"
 
 # Use the database-backed adapters for Rails.cache, Active Job, and Action Cable
 gem "solid_cache"
